# nornickel-hackathon

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  AGENTS.md  Dockerfile  README.md  Taskfile.yml  buf.gen.yml  go.mod  go.sum  lefthook.yml
.agents/: 01-brief.md  02-hypotheses.md  03-architecture.md  04-data-model.md  05-ingestion.md  06-extraction.md  07-query-pipeline.md  08-epistemic.md  09-services.md  10-contracts.md  11-nfr.md  12-deployment.md  13-evaluation.md  14-roadmap.md  15-resources.md  16-dev-environment.md  17-frontend.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml
cmd/answer/: main.go
cmd/bootstrap/: main.go
cmd/catalog/: main.go
cmd/epistemic/: main.go
cmd/gateway/: main.go
cmd/ingest/: main.go
cmd/llm/: main.go
cmd/search/: main.go
configs/: secrets.yml.example
configs/base/: answer.yml  bootstrap.yml  catalog.yml  common.yml  embed.yml  epistemic-bands.yml  epistemic.yml  gateway.yml  ingest.yml  llm-routes.yml  llm.yml  ranking.yml  search.yml  ui.yml
configs/demo/: common.yml  embed.yml  gateway.yml
configs/dev/: answer.yml  common.yml  gateway.yml  search.yml  ui.yml
configs/prod/: gateway.yml
contracts/openapi/: embed.go  openapi.yml
db/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_app_role.down.sql  000002_app_role.up.sql  000003_read_rls.down.sql  000003_read_rls.up.sql  000004_facts_natural_key.down.sql  000004_facts_natural_key.up.sql  000005_answer_cache_slugs.down.sql  000005_answer_cache_slugs.up.sql
db/seeds/: demo.sql
deploy/compose/: docker-compose.yml
deploy/keycloak/: realm-kmap.json
deploy/vm/: compose.prod.yml  deploy.sh
ops/alerts/: alerts.yml
services/embed/: Dockerfile  pyproject.toml
services/embed/src/embed/: __init__.py  backfill.py  config.py  embedder.py  main.py  server.py
services/embed/tests/: test_cache.py
services/eval/: pyproject.toml
services/eval/src/eval/: gold.py  main.py  metrics.py
services/eval/tests/: test_metrics.py
services/extract/: Dockerfile  pyproject.toml
services/extract/src/extract/: config.py  main.py  numcore.py  units.yml
services/extract/tests/: golden.yml  test_numcore.py
services/parse/: .dockerignore  Dockerfile  pyproject.toml
services/parse/src/parse/: config.py  docir.py  main.py
ui/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
(+178 files in other folders)
