[project]
name = "kmap-embed"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.60",
    "grpcio-reflection>=1.60",
    "protobuf>=5.26",
    "pyyaml>=6.0",
    "openai>=1.40",
    "transformers>=4.45",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
kmap-embed = "embed.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embed"]

[tool.ruff]
line-length = 120
extend-exclude = ["src/embed/gen"]
