[project]
name = "kmap-extract"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "nats-py>=2.6",
    "minio>=7.2",
    "pyyaml>=6.0",
]

[project.scripts]
kmap-extract = "extract.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extract"]
