[project]
name = "kmap-parse"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "nats-py>=2.6",
    "minio>=7.2",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.scripts]
kmap-parse = "parse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parse"]
